@@ -78,7 +78,7 @@ gnome_vfs_file_size_to_string (GnomeVFSFileSize bytes)
 
 static const guchar acceptable[96] =
 { /* X0  X1  X2  X3  X4  X5  X6  X7  X8  X9  XA  XB  XC  XD  XE  XF */
-    0x0,0xF,0x0,0x0,0x0,0x0,0x0,0xF,0xF,0xF,0xF,0xE,0x0,0xF,0xF,0xC, /* 2X  !"#$%&'()*+,-./   */
+    0x0,0xF,0x0,0x0,0x0,0x0,0x0,0xF,0xF,0xF,0xF,0x2,0x0,0xF,0xF,0xC, /* 2X  !"#$%&'()*+,-./   */
     0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0x8,0x0,0x0,0x0,0x0,0x0, /* 3X 0123456789:;<=>?   */
     0x0,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF, /* 4X @ABCDEFGHIJKLMNO   */
     0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0xF,0x0,0x0,0x0,0x0,0xF, /* 5X PQRSTUVWXYZ[\]^_   */
